<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="app_description">Android Challenge One by Chisom</string>
    <string name="activity_main_welcome">Welcome to ALC 4.0</string>
    <string name="activity_main_about">About ALC</string>
    <string name="activity_main_profile">My Profile</string>
    <string name="self">Nwisu Chisom</string>
    <string name="track">Track:</string>
    <string name="country">Country:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone Number:</string>
    <string name="slack">Slack Username:</string>
</resources>
