<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activity_main_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_main_welcome"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_main_btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/homeButtonColor"
        android:text="@string/activity_main_about"
        app:layout_constraintEnd_toEndOf="@+id/activity_main_welcome"
        app:layout_constraintStart_toStartOf="@+id/activity_main_welcome"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_welcome" />

    <Button
        android:id="@+id/activity_main_btn_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/homeButtonColor"
        android:text="@string/activity_main_profile"
        app:layout_constraintEnd_toEndOf="@+id/activity_main_btn_about"
        app:layout_constraintStart_toStartOf="@+id/activity_main_btn_about"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_btn_about" />
</androidx.constraintlayout.widget.ConstraintLayout>